--- a/blog/templates/forms/creatpost.html
+++ b/blog/templates/forms/creatpost.html
@@ -2,28 +2,11 @@
 {% block title %}profile{% endblock %}
 {% block content %}
 
- <form method="post">
+ <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-        {% for field in form %}
-            <div>{{ field.label_tag }}</div>
+    {{ form.as_p }}
+    <input type="submit" value="save">
 
-            {{ field }}
-            <div>{{ field.errors }}</div>
-        {% endfor %}
-    <input type="submit" value="ثبت تیکت">
-    </form>
-    {% if form.errors %}
-        <br>
-        {% for field in form %}
-            {% if field.errors %}
-                {% for error in field.errors %}
-                    {{ field.label }}:{{ error }}
-                 {% endfor %}
-            {% endif %}
-        {% endfor %}
-    {% endif %}
-    {% if form.non_field_errors %}
-        {{ form.non_field_errors }}
-    {% endif %}
+ </form>
 
 {% endblock %}
