--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -15,7 +15,7 @@
             <td>{{ forloop.counter }}</td>
             <td><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></td>
             <td><a href="#">edit</a></td>
-            <td><a href="#">delete</a></td>
+            <td><a href="{% url "blog:delete_post" post.id %}">delete</a></td>
         </tr>
     {% endfor %}
     </table>
