--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -9,7 +9,7 @@
        <a href="{{ post.get_absolute_url }}" >{{ post.title }}</a>
        </h3>
         <p class="descr">{{ post.description | truncatewords:2 }}</p>
-        <img src="{{ post.images.image1.image_file.url }}" alt="{{ post.images.first.title.url }}">
+        <img src="{{ post.images.first.image_file.url }}" alt="{{ post.images.first.title.url }}">
         </li>
     {% endfor %}
 </ol>
