--- a/blog/templates/blog/profile.html
+++ b/blog/templates/blog/profile.html
@@ -14,7 +14,7 @@
         <tr>
             <td>{{ forloop.counter }}</td>
             <td><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></td>
-            <td><a href="#">edit</a></td>
+            <td><a href="{% url 'blog:edit_post'  post.id%}">edit</a></td>
             <td><a href="{% url "blog:delete_post" post.id %}">delete</a></td>
         </tr>
     {% endfor %}
