--- a/blog/templates/partials/header.html
+++ b/blog/templates/partials/header.html
@@ -3,5 +3,13 @@
     <input type="text" name="query" required>
     <input type="submit" value="search">
 </form>
+<div>
+    {% if request.user.is_authenticated %}
+        <a href="#" >{{request.user.first_name | default:request.user.username }}</a>
+        {% else %}
+        <a href="{% url "blog:login" %}" >enter</a>
+    {% endif %}
+
+</div>
 <p><a href="{% url 'blog:profile' %}">profile</a></p>
 <br>
