--- a/blog/templates/registration/passwordchangeform.html
+++ b/blog/templates/registration/passwordchangeform.html
@@ -1,12 +1,12 @@
 {% extends 'parent/base.html' %}
-{% block title %}login{% endblock %}
+{% block title %}change password{% endblock %}
 {% block content %}
-    <p>enter your information</p>
+    <p> please enter your old password and new password</p>
+    <p>reset your password</p>
     <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
         <input type="hidden" name="text", value="{{ next }}">
-    <input type="submit" value="enter">
+    <input type="submit" value="save">
     </form>
-    <p><a href="{% url 'blog:password_rest' %}">forget your password?</a></p>
 {% endblock %}
