--- a/blog/templates/blog/list.html
+++ b/blog/templates/blog/list.html
@@ -26,9 +26,9 @@
       <div class="col-12">
 				<div class="border p-4 text-center rounded-3">
                     {% if category %}
-                        <h1><a href="{% url 'blog:post_list' %}" > لیست پست های {{ category }}</a></h1>
+                        <h1><a href="{% url 'blog:post_list' %}" > لیست حساب های {{ category }}</a></h1>
                     {% else %}
-                        <h1><a href="{% url 'blog:post_list' %}" >لیست پست ها</a></h1>
+                        <h1><a href="{% url 'blog:post_list' %}" >لیست حساب ها</a></h1>
                     {% endif %}
 					<nav class="d-flex justify-content-center" aria-label="breadcrumb">
 					</nav>
@@ -48,7 +48,12 @@
 				<div class="card mb-4">
 					<div class="row">
 						<div class="col-md-5">
-							<img class="rounded-3" src="{{ post.images.first.image_file.url }}" alt="{{ post.images.first.title }}">
+                            {% if post.images.first.image_file %}
+                             <img class="rounded-3" src="{{ post.images.first.image_file.url }}" alt="{{ post.images.first.title }}">
+                            {% else %}
+                            <img class="rounded-3" src="{% static 'images/cover/images.jpg' %}" alt="no image">
+                            {% endif %}
+
 						</div>
 						<div class="col-md-7 mt-3 mt-md-0">
 							<a href="#" class="badge text-bg-danger mb-2"><i class="fas fa-circle me-2 small fw-bold"></i>{{ post.category}}</a>
@@ -60,7 +65,7 @@
 									<div class="nav-link">
 										<div class="d-flex align-items-center position-relative">
 											<div class="avatar avatar-xs">
-												<img class="avatar-img rounded-circle" src="{{ post.author.account.photo.url }}" alt="avatar">
+
 											</div>
 											<span class="ms-3">توسط <a href="#" class="stretched-link text-reset btn-link">{{ post.author }}</a></span>
 										</div>
@@ -86,25 +91,25 @@
 						<!-- Category item -->
 						<div class="text-center mb-3 card-bg-scale position-relative overflow-hidden rounded" style="background-image:url("#"); background-position: center left; background-size: cover;">
 							<div class="bg-dark-overlay-4 p-3">
-								<a href="{% url 'blog:post_list_category' 'تکنولوژِی' %}" class="stretched-link btn-link text-white h5">تکنولوژِی</a>
+								<a href="{% url 'blog:post_list_category' 'قائم30' %}" class="stretched-link btn-link text-white h5">قائم30</a>
 							</div>
 						</div>
 						<!-- Category item -->
 						<div class="text-center mb-3 card-bg-scale position-relative overflow-hidden rounded" style="background-image:url(assets/images/blog/4by3/02.jpg); background-position: center left; background-size: cover;">
 							<div class="bg-dark-overlay-4 p-3">
-								<a href="{% url 'blog:post_list_category' 'هوش مصنوعی' %}" class="stretched-link btn-link text-white h5">هوش مصنوعی</a>
+								<a href="{% url 'blog:post_list_category' 'کاویان' %}" class="stretched-link btn-link text-white h5">کاویان</a>
 							</div>
 						</div>
 						<!-- Category item -->
 						<div class="text-center mb-3 card-bg-scale position-relative overflow-hidden rounded" style="background-image:url(assets/images/blog/4by3/03.jpg); background-position: center left; background-size: cover;">
 							<div class="bg-dark-overlay-4 p-3">
-								<a href="{% url 'blog:post_list_category' 'زبان برنامه نویسی' %}" class="stretched-link btn-link text-white h5">زبان برنامه نویسی</a>
+								<a href="{% url 'blog:post_list_category' 'سنگ شور' %}" class="stretched-link btn-link text-white h5">سنگ شور</a>
 							</div>
 						</div>
 						<!-- Category item -->
 						<div class="text-center mb-3 card-bg-scale position-relative overflow-hidden rounded" style="background-image:url(assets/images/blog/4by3/04.jpg); background-position: center left; background-size: cover;">
 							<div class="bg-dark-overlay-4 p-3">
-								<a href="{% url 'blog:post_list_category' 'بلاکچین' %}" class="stretched-link btn-link text-white h5">بلاکچین</a>
+								<a href="{% url 'blog:post_list_category' 'نورد' %}" class="stretched-link btn-link text-white h5">نورد</a>
 							</div>
 						</div>
 						<!-- Category item -->
@@ -130,7 +135,7 @@
 							<div class="card mb-3">
 								<div class="row g-3">
 									<div class="col-4">
-										<img class="rounded" src="{{ post.images.first.image_file.url}}" alt="">
+{#										<img class="rounded" src="{{ post.images.first.image_file.url}}" alt="">#}
 									</div>
 									<div class="col-8">
 										<h6><a href="{{post.get_absolute_url}}" class="btn-link stretched-link text-reset">{{post.title}}</a></h6>
